--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "./lib/index",
   "dependencies": {
     "moment": "~2.8.1",
-    "serialport": "~1.4.5"
+    "serialport": "~1.4.5",
+    "restler": "~3.2.2"
   },
   "devDependencies": {
   },
