--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "author": "Andreas Gerstmayr",
   "name": "coptermanager",
-  "description": "Control your drones with JS",
   "version": "0.1.1",
+  "description": "Control your drones with JS",
+  "author": "Andreas Gerstmayr",
   "repository": {
-    "url": ""
+    "type": "git",
+    "url": "git://github.com/andihit/coptermanager-client.git"
   },
-  "main": "./lib/index",
   "dependencies": {
     "moment": "~2.8.1",
     "serialport": "~1.4.5",
-    "restler": "~3.2.2"
+    "underscore": "~1.6.0",
+    "xmlhttprequest": "~1.6.0"
   },
   "devDependencies": {
+    "coffee-script": "~1.7.1"
   },
-  "optionalDependencies": {
-  },
-  "engines": {
-    "node": "*"
+  "main": "./lib/index",
+  "scripts": {
+    "prepublish": "coffee --compile --output lib/ src/"
   }
 }
