--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "xmlhttprequest": "~1.6.0"
   },
   "devDependencies": {
-    "coffee-script": "~1.7.1"
+    "gulp": "~3.8.7",
+    "gulp-coffee": "~2.1.1",
+    "gulp-util": "~3.0.0",
+    "gulp-browserify": "~0.5.0",
+    "gulp-concat": "~2.3.4"
   },
   "main": "./lib/index",
   "scripts": {
-    "prepublish": "coffee --compile --output lib/ src/"
+    "prepublish": "gulp coffee"
   }
 }
