--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "xmlhttprequest": "~1.6.0"
   },
   "devDependencies": {
+    "del": "^0.1.2",
     "gulp": "~3.8.7",
-    "gulp-coffee": "~2.1.1",
-    "gulp-util": "~3.0.0",
     "gulp-browserify": "~0.5.0",
-    "gulp-concat": "~2.3.4"
+    "gulp-coffee": "~2.1.1",
+    "gulp-concat": "~2.3.4",
+    "gulp-util": "~3.0.0"
   },
   "main": "./lib/index",
   "scripts": {
